# VoxBook

./: .gitignore  LICENSE  README.md
backend/: create_test_pdf.py  generate_welcome.py  main.py  pyproject.toml  server.py
backend/parser/: llm_structurer.py  pdf_extractor.py
backend/tts/: synthesizer.py
frontend/: index.html
frontend/public/books/: books.json
frontend/public/books/welcome-to-voxbook/: metadata.json
frontend/src/: App.jsx  index.css
